# secunda

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
resources/: backup.sql
scripts/: .env.template  init_env.py  run.sh  start.sh
src/alembic/: env.py
src/alembic/versions/: 065d0ff6387b_create_tables.py  beda8671983b_create_tables.py
src/core/: config.py  error.py  logger.py
src/db/: base.py  models.py  pre_load.py  session.py
src/routes/: depends.py  dto.py  logs.py  routes.py
static/: fixtures.json
tests/: conftest.py  test_routes.py
